fix: adjust navbar spacing and layout for improved UI consistency

--- a/day-14/Frontend/src/features/shared/nav.scss
+++ b/day-14/Frontend/src/features/shared/nav.scss
@@ -21,14 +21,14 @@
 
     .container{
         height: 45vh;
-        margin-top: 5rem;
+        margin-top: 4rem;
 
         .options{
             height: 100%;
             display: flex;
             width: 180px;
             flex-direction: column;
-            gap: 1.5rem;
+            gap: 0.5rem;
             position: relative;
             z-index: 99;
 
@@ -93,7 +93,7 @@
         height: 100px;
         border-radius: 0.5rem;
         position: absolute;
-        bottom: 8%;
+        bottom: 10%;
         display: flex;
         flex-direction: column;
         background-color: var(--surface-color);
